--- a/config/sync/core.entity_form_display.paragraph.image.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.image.default.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.image.field_admin_description
+    - field.field.paragraph.image.field_image
     - field.field.paragraph.image.field_image_style
-    - field.field.paragraph.image.field_oc_image
-    - field.field.paragraph.image.field_oc_link
+    - field.field.paragraph.image.field_link
     - field.field.paragraph.image.field_widget_title
     - paragraphs.paragraphs_type.image
   module:
@@ -28,14 +28,8 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_image_style:
-    weight: 4
-    settings: {  }
-    third_party_settings: {  }
-    type: options_select
-    region: content
-  field_oc_image:
-    weight: 3
+  field_image:
+    weight: 2
     settings:
       form_mode: default
       label_singular: ''
@@ -44,13 +38,22 @@ content:
       allow_existing: true
       match_operator: CONTAINS
       override_labels: false
+      collapsible: false
+      collapsed: false
+      allow_duplicate: false
     third_party_settings:
       entity_browser_entity_form:
         entity_browser_id: image_browser
     type: inline_entity_form_complex
     region: content
-  field_oc_link:
-    weight: 5
+  field_image_style:
+    weight: 3
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_link:
+    weight: 4
     settings:
       placeholder_url: ''
       placeholder_title: ''
