--- a/config/sync/core.entity_form_display.paragraph.text.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.text.default.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.text.field_admin_description
-    - field.field.paragraph.text.field_oc_long_text
+    - field.field.paragraph.text.field_long_text
     - field.field.paragraph.text.field_widget_title
     - paragraphs.paragraphs_type.text
   module:
@@ -24,7 +24,7 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_oc_long_text:
+  field_long_text:
     weight: 2
     settings:
       rows: 5
