--- a/config/sync/core.entity_view_display.paragraph.image.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.image.default.yml
@@ -4,14 +4,13 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.image.field_admin_description
+    - field.field.paragraph.image.field_image
     - field.field.paragraph.image.field_image_style
-    - field.field.paragraph.image.field_oc_image
-    - field.field.paragraph.image.field_oc_link
+    - field.field.paragraph.image.field_link
     - field.field.paragraph.image.field_widget_title
     - paragraphs.paragraphs_type.image
   module:
     - layout_builder
-    - layout_discovery
     - link
     - options
 third_party_settings:
@@ -26,6 +25,15 @@ targetEntityType: paragraph
 bundle: image
 mode: default
 content:
+  field_image:
+    type: entity_reference_entity_view
+    weight: 1
+    label: hidden
+    settings:
+      view_mode: default
+      link: false
+    third_party_settings: {  }
+    region: content
   field_image_style:
     weight: 2
     label: hidden
@@ -33,17 +41,8 @@ content:
     third_party_settings: {  }
     type: list_key
     region: content
-  field_oc_image:
-    weight: 1
-    label: hidden
-    settings:
-      link: true
-      view_mode: default
-    third_party_settings: {  }
-    type: entity_reference_entity_view
-    region: content
-  field_oc_link:
-    weight: 4
+  field_link:
+    weight: 3
     label: hidden
     settings:
       trim_length: 80
