--- a/config/sync/core.entity_view_display.paragraph.image.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.image.preview.yml
@@ -5,14 +5,12 @@ dependencies:
   config:
     - core.entity_view_mode.paragraph.preview
     - field.field.paragraph.image.field_admin_description
+    - field.field.paragraph.image.field_image
     - field.field.paragraph.image.field_image_style
-    - field.field.paragraph.image.field_oc_image
-    - field.field.paragraph.image.field_oc_link
     - field.field.paragraph.image.field_widget_title
     - paragraphs.paragraphs_type.image
   module:
     - layout_builder
-    - layout_discovery
 third_party_settings:
   layout_builder:
     sections: {  }
@@ -34,7 +32,6 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  field_image: true
   field_image_style: true
-  field_oc_image: true
-  field_oc_link: true
   field_widget_title: true
