--- a/config/sync/core.entity_view_display.paragraph.video.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.video.default.yml
@@ -4,12 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.video.field_admin_description
-    - field.field.paragraph.video.field_oc_video
+    - field.field.paragraph.video.field_video
     - field.field.paragraph.video.field_widget_title
     - paragraphs.paragraphs_type.video
   module:
     - layout_builder
-    - layout_discovery
 third_party_settings:
   layout_builder:
     sections: {  }
@@ -22,14 +21,14 @@ targetEntityType: paragraph
 bundle: video
 mode: default
 content:
-  field_oc_video:
-    weight: 2
+  field_video:
+    type: entity_reference_entity_view
+    weight: 1
     label: hidden
     settings:
       view_mode: default
       link: false
     third_party_settings: {  }
-    type: entity_reference_entity_view
     region: content
   field_widget_title:
     weight: 0
