--- a/config/sync/field.field.paragraph.links_files.field_link_multi.yml
+++ b/config/sync/field.field.paragraph.links_files.field_link_multi.yml
@@ -1,25 +1,23 @@
-uuid: a1802094-d3c1-4549-9667-16906ce26f46
+uuid: 690fbbea-7e7b-4a38-87b8-2cb4d46718f1
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_oc_link_multi
+    - field.storage.paragraph.field_link_multi
     - paragraphs.paragraphs_type.links_files
   module:
     - link
-_core:
-  default_config_hash: o5UFgPI1Tr0Q76QYsDzP5kydDJ3pMkPgBXynVAc2wS8
-id: paragraph.links_files.field_oc_link_multi
-field_name: field_oc_link_multi
+id: paragraph.links_files.field_link_multi
+field_name: field_link_multi
 entity_type: paragraph
 bundle: links_files
 label: Links
 description: 'Add links to existing nodes or files as well as external urls.'
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
   link_type: 17
-  title: 1
+  title: 2
 field_type: link
