--- a/config/sync/field.storage.paragraph.field_link.yml
+++ b/config/sync/field.storage.paragraph.field_link.yml
@@ -1,20 +1,18 @@
-uuid: 58968c98-1266-4f3d-a76c-92abbf2ceba9
+uuid: 5ed4a5b6-07b8-46a0-a967-a2609f127e57
 langcode: en
 status: true
 dependencies:
   module:
     - link
     - paragraphs
-_core:
-  default_config_hash: 5BJDuwe3RqEcNgdOp2yrTwCUgZqx5y2NqKPIVJglXlw
-id: paragraph.field_oc_link_multi
-field_name: field_oc_link_multi
+id: paragraph.field_link
+field_name: field_link
 entity_type: paragraph
 type: link
 settings: {  }
 module: link
 locked: false
-cardinality: -1
+cardinality: 1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
