--- a/config/sync/field.storage.paragraph.field_quote.yml
+++ b/config/sync/field.storage.paragraph.field_quote.yml
@@ -1,14 +1,12 @@
-uuid: 2ca4eccf-e52b-41c9-a204-1399813fcbd9
+uuid: a9619d43-b3ab-45d7-9700-a24e475eb2a5
 langcode: en
 status: true
 dependencies:
   module:
     - paragraphs
     - text
-_core:
-  default_config_hash: mI1SRMHt7jNUcTSFQDzRjgJ3V-WuY1WKk3JSmrn_bvU
-id: paragraph.field_oc_long_text
-field_name: field_oc_long_text
+id: paragraph.field_quote
+field_name: field_quote
 entity_type: paragraph
 type: text_long
 settings: {  }
