--- a/config/sync/field.field.node.landing_page.field_paragraphs.yml
+++ b/config/sync/field.field.node.landing_page.field_paragraphs.yml
@@ -1,19 +1,19 @@
-uuid: d2921490-2d3a-4fcc-accd-0a278841c27f
+uuid: 002cf1ab-e90c-4f88-9215-49194f62b440
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_oc_widgets
+    - field.storage.node.field_paragraphs
     - node.type.landing_page
     - paragraphs.paragraphs_type.landing_page_section
   module:
     - entity_reference_revisions
-id: node.landing_page.field_oc_widgets
-field_name: field_oc_widgets
+id: node.landing_page.field_paragraphs
+field_name: field_paragraphs
 entity_type: node
 bundle: landing_page
-label: Widgets
-description: 'Add paragraphs to this node. Use the layout option on each paragraph to set its width and use the draggable handles to set the order to create custom paragraph grids. <strong>NOTE:</strong> When customizing the layout via Layout Builder you cannot re-order paragraphs, you can only move the whole field itself.'
+label: Sections
+description: 'Add paragraphs to this node. Use the layout option on each paragraph to set it''s content widths and use the draggable handles to set the order to create custom paragraph grids. <strong>NOTE:</strong> When customizing the layout via Layout Builder you cannot re-order paragraphs, you can only move the whole field itself.'
 required: false
 translatable: true
 default_value: {  }
@@ -26,54 +26,45 @@ settings:
       landing_page_section: landing_page_section
     target_bundles_drag_drop:
       accordion_group:
-        weight: 19
+        weight: 15
         enabled: false
       accordion_item:
-        weight: 20
+        weight: 16
         enabled: false
       basic_page_section:
-        weight: 21
+        weight: 17
         enabled: false
       block_placer:
-        weight: 22
-        enabled: false
-      event_by_category:
-        weight: 23
+        weight: 18
         enabled: false
       form:
-        weight: 24
+        weight: 19
         enabled: false
       from_library:
-        weight: 25
+        weight: 20
+        enabled: false
+      gallery:
+        weight: 21
         enabled: false
       image:
-        weight: 26
+        weight: 22
         enabled: false
       landing_page_section:
         enabled: true
-        weight: 27
-      lightbox_gallery:
-        weight: 28
-        enabled: false
+        weight: 23
       links_files:
-        weight: 29
-        enabled: false
-      news_by_category:
-        weight: 31
+        weight: 24
         enabled: false
       pullquote:
-        weight: 32
-        enabled: false
-      slideshow:
-        weight: 33
+        weight: 25
         enabled: false
       text:
-        weight: 34
+        weight: 26
         enabled: false
       video:
-        weight: 35
+        weight: 27
         enabled: false
       view_placer:
-        weight: 36
+        weight: 28
         enabled: false
 field_type: entity_reference_revisions
