--- a/config/sync/field.field.node.page.field_paragraphs.yml
+++ b/config/sync/field.field.node.page.field_paragraphs.yml
@@ -1,21 +1,21 @@
-uuid: 3b91b830-003a-4813-93ad-c9be6da84d7d
+uuid: 878cfc4f-c499-400f-8d1b-11f5d1a099f0
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_oc_widgets
+    - field.storage.node.field_paragraphs
     - node.type.page
     - paragraphs.paragraphs_type.basic_page_section
   module:
     - entity_reference_revisions
-id: node.page.field_oc_widgets
-field_name: field_oc_widgets
+id: node.page.field_paragraphs
+field_name: field_paragraphs
 entity_type: node
 bundle: page
-label: Widgets
-description: 'Add paragraphs to this node. Use the layout option on each paragraph to set its width and use the draggable handles to set the order to create custom paragraph grids.'
+label: Sections
+description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
@@ -26,21 +26,24 @@ settings:
       basic_page_section: basic_page_section
     target_bundles_drag_drop:
       accordion_group:
-        weight: 16
+        weight: 15
         enabled: false
       accordion_item:
-        weight: 17
+        weight: 16
         enabled: false
       basic_page_section:
         enabled: true
-        weight: 18
+        weight: 17
       block_placer:
-        weight: 19
+        weight: 18
         enabled: false
       form:
-        weight: 20
+        weight: 19
         enabled: false
       from_library:
+        weight: 20
+        enabled: false
+      gallery:
         weight: 21
         enabled: false
       image:
@@ -49,25 +52,19 @@ settings:
       landing_page_section:
         weight: 23
         enabled: false
-      lightbox_gallery:
+      links_files:
         weight: 24
         enabled: false
-      links_files:
+      pullquote:
         weight: 25
         enabled: false
-      pullquote:
+      text:
         weight: 26
         enabled: false
-      slideshow:
+      video:
         weight: 27
         enabled: false
-      text:
-        weight: 28
-        enabled: false
-      video:
-        weight: 29
-        enabled: false
       view_placer:
-        weight: 30
+        weight: 28
         enabled: false
 field_type: entity_reference_revisions
