Disable oc_custom

--- a/config/sync/core.entity_view_display.paragraph.accordion_item.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.accordion_item.preview.yml
@@ -28,4 +28,5 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_long_text: true
