--- a/config/sync/core.entity_view_display.node.event.teaser.yml
+++ b/config/sync/core.entity_view_display.node.event.teaser.yml
@@ -44,6 +44,7 @@ hidden:
   addtoany: true
   field_banner: true
   field_category: true
+  field_date: true
   field_event_location: true
   field_event_pin_info: true
   field_metatags: true
