Rename oc_custom to citizen and enable

--- a/web/modules/custom/citizen/citizen.libraries.yml
+++ b/web/modules/custom/citizen/citizen.libraries.yml
@@ -1,22 +1,22 @@
-custom-global:
+global:
   version: 1.0
   css:
     theme:
       js/select2/select2.min.css: {}
-      css/custom-global.css: {}
+      css/global.css: {}
   js:
     js/select2/select2.min.js: {}
-    js/custom-global.js: {}
+    js/global.js: {}
   dependencies:
     - core/jquery
     - core/drupal.ajax
     - core/drupal
     - core/drupalSettings
     - core/jquery.once
-custom:
+node:
   version: 1.x
-  js:
-    js/custom-node.js: {}
   css:
     theme:
-      css/custom-node.css: {}
+      css/node.css: {}
+  js:
+    js/node.js: {}
