Fix site search page search block

--- a/config/sync/views.view.site_search.yml
+++ b/config/sync/views.view.site_search.yml
@@ -240,7 +240,7 @@ display:
               administrator: '0'
               senior_editor: '0'
               editor: '0'
-            placeholder: ''
+            placeholder: 'Enter keyword(s)'
           is_grouped: false
           group_info:
             label: ''
