--- a/config/sync/block.block.bartik_content.yml
+++ b/config/sync/block.block.bartik_content.yml
@@ -1,15 +1,15 @@
-uuid: dda9c1bf-aa68-4853-9a23-23abc809329a
+uuid: f19d39fc-94dd-40de-8f50-1e54ee8c55a6
 langcode: en
 status: true
 dependencies:
   module:
     - system
   theme:
-    - oc_patterns
+    - bartik
 _core:
   default_config_hash: LOo7irMky6bF1tTsaficc8SbrOuGDZNDJ9J2GBxUOnw
-id: oc_patterns_content
-theme: oc_patterns
+id: bartik_content
+theme: bartik
 region: content
 weight: -2
 provider: null
