--- a/config/sync/block.block.bartik_footer.yml
+++ b/config/sync/block.block.bartik_footer.yml
@@ -1,4 +1,4 @@
-uuid: a7fdcea4-eee2-40e5-b0be-f1d219760a42
+uuid: b35bb9db-56a7-444d-a385-37012d2c7743
 langcode: en
 status: true
 dependencies:
@@ -7,12 +7,12 @@ dependencies:
   module:
     - menu_block
   theme:
-    - oc_patterns
+    - bartik
 _core:
   default_config_hash: b1YEev4sFgrNyB1POY_3_VVXyfaOG0eYtCE0qwBuzbM
-id: oc_patterns_footer
-theme: oc_patterns
-region: footer
+id: bartik_footer
+theme: bartik
+region: header
 weight: -5
 provider: null
 plugin: 'menu_block:footer'
