--- a/config/sync/block.block.bartik_local_actions.yml
+++ b/config/sync/block.block.bartik_local_actions.yml
@@ -1,13 +1,13 @@
-uuid: d25808f7-8cc1-4e03-adea-5adaabc1c727
+uuid: 09b91d7f-3528-4d0b-a10a-d6139921e513
 langcode: en
 status: true
 dependencies:
   theme:
-    - oc_patterns
+    - bartik
 _core:
   default_config_hash: PmnIbG5xqKopVIejW-q8GfaQIfxwhA6-AYr8oTSAU2Y
-id: oc_patterns_local_actions
-theme: oc_patterns
+id: bartik_local_actions
+theme: bartik
 region: content
 weight: -3
 provider: null
