--- a/config/sync/core.entity_view_display.media.image.medium.yml
+++ b/config/sync/core.entity_view_display.media.image.medium.yml
@@ -8,11 +8,8 @@ dependencies:
     - field.field.media.image.field_media_categories
     - field.field.media.image.field_media_image
     - media.type.image
-    - responsive_image.styles.medium_500
   module:
     - layout_builder
-    - layout_discovery
-    - responsive_image
 third_party_settings:
   layout_builder:
     sections: {  }
@@ -33,18 +30,10 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     region: content
-  field_media_image:
-    type: responsive_image
-    weight: 0
-    region: content
-    label: hidden
-    settings:
-      responsive_image_style: medium_500
-      image_link: ''
-    third_party_settings: {  }
 hidden:
   created: true
   field_media_categories: true
+  field_media_image: true
   name: true
   thumbnail: true
   uid: true
