--- a/config/sync/core.entity_view_display.media.image.square.yml
+++ b/config/sync/core.entity_view_display.media.image.square.yml
@@ -8,10 +8,8 @@ dependencies:
     - field.field.media.image.field_media_categories
     - field.field.media.image.field_media_image
     - media.type.image
-    - responsive_image.styles.350x350
   module:
     - layout_builder
-    - responsive_image
 third_party_settings:
   layout_builder:
     sections: {  }
@@ -32,19 +30,11 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     region: content
-  field_media_image:
-    type: responsive_image
-    weight: 0
-    region: content
-    label: hidden
-    settings:
-      responsive_image_style: 350x350
-      image_link: ''
-    third_party_settings: {  }
 hidden:
   addtoany: true
   created: true
   field_media_categories: true
+  field_media_image: true
   name: true
   thumbnail: true
   uid: true
