--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -111,7 +111,7 @@ theme:
   stable: 0
   classy: 0
   seven: 0
-  oc_patterns: 0
+  bartik: 0
 profile: oc
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
