--- a/config/sync/core.entity_view_display.node.landing_page.default.yml
+++ b/config/sync/core.entity_view_display.node.landing_page.default.yml
@@ -125,15 +125,20 @@ third_party_settings:
   layout_builder_restrictions:
     allowed_blocks:
       AddToAny: {  }
+      'Chaos Tools': {  }
+      Content: {  }
       core: {  }
       Flippy: {  }
       Forms: {  }
       Help: {  }
+      'Inline blocks': {  }
       Menus: {  }
+      'Site Search': {  }
       Superfish: {  }
       System:
         - system_breadcrumb_block
       User: {  }
+      'User fields': {  }
       Webform: {  }
     allowed_layouts:
       - layout_onecol
