--- a/config/sync/field.field.paragraph.basic_page_section.field_section_widgets.yml
+++ b/config/sync/field.field.paragraph.basic_page_section.field_section_widgets.yml
@@ -8,6 +8,7 @@ dependencies:
     - paragraphs.paragraphs_type.basic_page_section
     - paragraphs.paragraphs_type.form
     - paragraphs.paragraphs_type.from_library
+    - paragraphs.paragraphs_type.horizontal_rule
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.links_files
     - paragraphs.paragraphs_type.pullquote
@@ -32,6 +33,7 @@ settings:
     target_bundles:
       accordion_group: accordion_group
       form: form
+      horizontal_rule: horizontal_rule
       image: image
       links_files: links_files
       pullquote: pullquote
@@ -41,44 +43,47 @@ settings:
     target_bundles_drag_drop:
       accordion_group:
         enabled: true
-        weight: -39
+        weight: -31
       accordion_item:
-        weight: -38
+        weight: -30
         enabled: false
       basic_page_section:
-        weight: -37
+        weight: -29
         enabled: false
       block_placer:
-        weight: -36
+        weight: -28
         enabled: false
       form:
         enabled: true
-        weight: -33
+        weight: -27
+      horizontal_rule:
+        enabled: true
+        weight: -26
       image:
         enabled: true
-        weight: -31
+        weight: -25
       landing_page_section:
-        weight: -30
+        weight: -24
         enabled: false
       links_files:
         enabled: true
-        weight: -28
+        weight: -23
       pullquote:
         enabled: true
-        weight: -25
+        weight: -22
       text:
         enabled: true
-        weight: -23
+        weight: -21
       video:
         enabled: true
-        weight: -22
+        weight: -20
       gallery:
-        weight: 23
+        weight: -19
         enabled: false
       from_library:
         enabled: true
-        weight: 28
+        weight: -18
       view_placer:
-        weight: 32
+        weight: -17
         enabled: false
 field_type: entity_reference_revisions
