--- a/composer.json
+++ b/composer.json
@@ -124,6 +124,7 @@
     "drupal/twig_tweak": "^2.0",
     "drupal/video_embed_field": "^2.0",
     "drupal/video_embed_media": "^2.0",
+    "drupal/views_bulk_operations": "^2.5",
     "drupal/views_infinite_scroll": "^1.5",
     "drupal/webform": "^5.1",
     "drupal/xmlsitemap": "^1.0@alpha",
