--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -94,6 +94,7 @@ module:
   user: 0
   video_embed_field: 0
   video_embed_media: 0
+  views_bulk_operations: 0
   views_infinite_scroll: 0
   views_ui: 0
   webform: 0
