--- a/config/sync/pathauto.pattern.profiles.yml
+++ b/config/sync/pathauto.pattern.profiles.yml
@@ -9,16 +9,16 @@ _core:
 id: profiles
 label: Profiles
 type: 'canonical_entities:node'
-pattern: 'profiles/[node:title]'
+pattern: 'meet-team/[node:title]'
 selection_criteria:
-  f92e1181-ef6b-4866-a553-2da91a2b0bad:
+  885da866-5a22-4eb4-8f70-68543d049cec:
     id: node_type
     bundles:
       profiles: profiles
     negate: false
     context_mapping:
       node: node
-    uuid: f92e1181-ef6b-4866-a553-2da91a2b0bad
+    uuid: 885da866-5a22-4eb4-8f70-68543d049cec
 selection_logic: and
 weight: -5
 relationships: {  }
