--- a/config/sync/field.field.node.blog.field_banner.yml
+++ b/config/sync/field.field.node.blog.field_banner.yml
@@ -14,7 +14,7 @@ entity_type: node
 bundle: blog
 label: Banner
 description: 'Banner images should be a minimum of 1600x900px. <strong>NOTE: </strong>Banners will be cropped into different aspect ratios depending on device and screen size. Use the focal point tool (crosshairs) to ensure that they most important part of the image is preserved in all ratios.'
-required: false
+required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
